--- a/bawbag.safariextension/Info.plist
+++ b/bawbag.safariextension/Info.plist
@@ -9,16 +9,43 @@
 	<key>CFBundleDisplayName</key>
 	<string>bawbag</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.bawbag</string>
+	<string>com.xerodonia.bawbag</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>Chrome</key>
+	<dict>
+		<key>Global Page</key>
+		<string>global.html</string>
+	</dict>
+	<key>Content</key>
+	<dict>
+		<key>Scripts</key>
+		<dict>
+			<key>End</key>
+			<array>
+				<string>bawbag.js</string>
+			</array>
+		</dict>
+	</dict>
 	<key>Description</key>
 	<string>Donald Trump is a bawbag!</string>
+	<key>DeveloperIdentifier</key>
+	<string>J6B6PF7Z9K</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
+	<key>Permissions</key>
+	<dict>
+		<key>Website Access</key>
+		<dict>
+			<key>Include Secure Pages</key>
+			<true/>
+			<key>Level</key>
+			<string>All</string>
+		</dict>
+	</dict>
 </dict>
 </plist>
