Fixed some issues with Ivanka

--- a/bawbag.safariextension/Info.plist
+++ b/bawbag.safariextension/Info.plist
@@ -7,7 +7,7 @@
 	<key>Builder Version</key>
 	<string>12603.2.4</string>
 	<key>CFBundleDisplayName</key>
-	<string>bawbag</string>
+	<string>Bawbag</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.xerodonia.bawbag</string>
 	<key>CFBundleInfoDictionaryVersion</key>
